<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3097e1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="86dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:text="@string/Mortgage_Calculator"
        android:textSize="16sp"
        android:textColor="#080808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Input1"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/PrincipleAmount"
        android:textColor="#080808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="279dp"
        android:layout_height="42dp"
        android:background="#3097e1"
        android:text="@string/Title"
        android:textColor="#080808"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <EditText
        android:id="@+id/Input2"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/Interest"
        android:textColor="#080808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input1" />

    <EditText
        android:id="@+id/Input3"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/Period"
        android:textColor="#080808"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input2" />

    <TextView
        android:id="@+id/Input4"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Frequency"
        android:textColor="#080808"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input3" />

    <Button
        android:id="@+id/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Calculate"
        android:textColor="#FFFFFF"
        android:background="#7ec1f2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Input4"
        app:layout_constraintVertical_bias="0.183" />

</androidx.constraintlayout.widget.ConstraintLayout>